2010-03-25  Maynard Johnson  <maynardj@us.ibm.com>

	* events/mips/loongson2/events: New File
	* events/mips/loongson2/unit_masks: New File
	   I neglected to do 'cvs add' for these new two new files
           back on Nov 25, 2009 when I committed the initial
           loongson2 support.  This change corrects that error.

2010-03-01  Gabor Loki  <loki@inf.u-szeged.hu>

	* daemon/opd_pipe.c: Fix memory leak
	* utils/opcontrol: Fix messages sending method to opd_pipe

2010-01-20  Maynard Johnson  <maynardj@us.ibm.com>

	* m4/qt.m4: Fix qt lib check so it works on base 64-bit system

2009-12-07  Robert Richter  <robert.richter@amd.com>

	* agents/Makefile.am:
	* configure.in: adding config option to disable oprofile user check

2009-11-25  Chen Jie  <chenj@lemote.com>

	* events/Makefile.am:
	* events/mips/loongson2/events: New File
	* events/mips/loongson2/unit_masks: New File
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c: Add default event for loongson2
	* libutil/op_cpufreq.c: Add freq estimation for high performance mips processors
	* utils/ophelp.c: Add support for ICT loongson2

2009-11-25  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.7cvs

2009-11-24  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.6

2009-10-29  William Cohen  <wcohen@redhat.com>

	* daemon/opd_perfmon.c: Fix start-daemon problem on ia64

2009-10-29  Maynard Johnson  <maynardj@us.ibm.com>

	* events/ppc64/power7/events:
	* events/ppc64/power7/event_mappings: Updates to POWER7 events and
	  groups

2009-10-28  Maynard Johnson  <maynardj@us.ibm.com>

	* doc/opreport.xsd: Fix up schema and bump version to match 2009-06-18 fix;
	  other schema fixups for correctness and to facilitate XML document-to-schema
	  validation works
	* libpp/xml_utils.cpp: bump schema version
	* libpp/format_output.cpp:
	* libpp/format_output.h: Fix regression in XML callgraph output