@@ -1,3 +1,8 @@
+2010-03-25  Oliver Schneider  <oliver@assarbad.net>
+
+	* libpp/parse_filename.cpp:  Catch case where a basic_string::erase
+	  error can occur in opreport when parsing an invalid sample file name
+
 2010-03-25  Maynard Johnson  <maynardj@us.ibm.com>
 
 	* events/mips/loongson2/events: New File
